--- a/library_user/pubspec.yaml
+++ b/library_user/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  ffi: ^2.1.0
+  path: ^1.9.0
   # path: ^1.8.0
 
 dev_dependencies:
