--- a/library_user/pubspec.yaml
+++ b/library_user/pubspec.yaml
@@ -4,14 +4,20 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.2.6
+  sdk: ^3.0.0
 
 # Add regular dependencies here.
 dependencies:
   ffi: ^2.1.0
   path: ^1.9.0
-  # path: ^1.8.0
 
 dev_dependencies:
+  ffigen: ^11.0.0
   lints: ^2.1.0
   test: ^1.24.0
+
+ffigen:
+  output: 'bin/generated_bindings.dart'
+  headers:
+    entry-points:
+      - '../shared_library/library.h'
